# hackathon-project-blockchain

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  INTEGRATION_EXAMPLE.md  NETWORK_SETUP.md  PHANTOM_SETUP.md  QUICK_START.md  README.md  SETUP-WSL.md  SETUP.md  SETUP_CLASSROOM.md  SETUP_SERVER.md  TROUBLESHOOTING.md  blockchain.js  classroom.js  index.html  package-lock.json  package.json  script.js  server.js  start-server.bat  start-server.sh  styles.css
app/: check-solana-install.ps1  install-solana-alternative.ps1  install-solana-fix.ps1  install-solana-windows.ps1  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/utils/: solana.ts
program/: Cargo.toml  README.md
program/src/: lib.rs
programs/trivia-game/src/: lib.rs
